--- a/index.html
+++ b/index.html
@@ -1,62 +1,59 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Shri AI Bot</title>
-  <style>
-    body{margin:0;font-family:Arial,Helvetica,sans-serif;background:#0f172a;color:#f1f5f9;display:flex;flex-direction:column;height:100vh}
-    header{padding:12px;background:#1e293b;color:#facc15;font-weight:bold;text-align:center}
-    #chat{flex:1;overflow-y:auto;padding:10px}
-    .msg{margin:8px 0;padding:10px;border-radius:8px;max-width:75%}
-    .user{background:#2563eb;color:#fff;margin-left:auto}
-    .bot{background:#334155;color:#f1f5f9;margin-right:auto}
-    form{display:flex;padding:10px;background:#1e293b}
-    input{flex:1;padding:10px;border-radius:6px;border:none;outline:none}
-    button{margin-left:10px;padding:10px 15px;border:none;border-radius:6px;background:#22c55e;color:#000;font-weight:bold;cursor:pointer}
-  </style>
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>Shri AI Bot</title>
+<style>
+body{margin:0;font-family:Arial,sans-serif;background:#0f172a;color:#f1f5f9;display:flex;flex-direction:column;height:100vh}
+header{padding:12px;background:#1e293b;color:#facc15;font-weight:bold;text-align:center}
+#chat{flex:1;overflow-y:auto;padding:10px}
+.msg{margin:8px 0;padding:10px;border-radius:8px;max-width:75%}
+.user{background:#2563eb;color:#fff;margin-left:auto}
+.bot{background:#334155;color:#f1f5f9;margin-right:auto}
+form{display:flex;padding:10px;background:#1e293b}
+input{flex:1;padding:10px;border-radius:6px;border:none;outline:none}
+button{margin-left:10px;padding:10px 15px;border:none;border-radius:6px;background:#22c55e;color:#000;font-weight:bold;cursor:pointer}
+</style>
 </head>
 <body>
-  <header>🙏 आपका Shri AI Bot अब चल रहा है</header>
-  <div id="chat"></div>
-  <form id="form">
-    <input id="inp" placeholder="अपना सवाल लिखें..." autocomplete="off"/>
-    <button type="submit">Send</button>
-  </form>
-
+<header>🙏 आपका Shri AI Bot</header>
+<div id="chat"></div>
+<form id="form">
+<input id="inp" placeholder="अपना सवाल लिखें..." autocomplete="off"/>
+<button type="submit">Send</button>
+</form>
 <script>
-const chat = document.getElementById("chat");
-const form = document.getElementById("form");
-const inp = document.getElementById("inp");
+const chat=document.getElementById("chat");
+const form=document.getElementById("form");
+const inp=document.getElementById("inp");
 
-function addMsg(text, who){
-  const div=document.createElement("div");
-  div.className="msg "+who;
-  div.textContent=text;
-  chat.appendChild(div);
-  chat.scrollTop=chat.scrollHeight;
+function addMsg(text,who){
+    const div=document.createElement("div");
+    div.className="msg "+who;
+    div.textContent=text;
+    chat.appendChild(div);
+    chat.scrollTop=chat.scrollHeight;
 }
 
-form.addEventListener("submit", async (e)=>{
-  e.preventDefault();
-  const q=inp.value.trim();
-  if(!q) return;
-
-  addMsg(q,"user");
-  inp.value="";
-  addMsg("सोच रहा हूँ...","bot");
-
-  try {
-    const res = await fetch("/chat", {
-      method: "POST",
-      headers: {"Content-Type": "application/json"},
-      body: JSON.stringify({message: q})
-    });
-    const data = await res.json();
-    chat.lastChild.textContent = data.reply;
-  } catch(err) {
-    chat.lastChild.textContent = "माफ करें, अभी जवाब नहीं दे पा रहा हूँ।";
-  }
+form.addEventListener("submit",async e=>{
+    e.preventDefault();
+    const q=inp.value.trim();
+    if(!q) return;
+    addMsg(q,"user");
+    inp.value="";
+    addMsg("सोच रहा हूँ...","bot");
+    try{
+        const res=await fetch("/chat",{
+            method:"POST",
+            headers:{"Content-Type":"application/json"},
+            body:JSON.stringify({message:q})
+        });
+        const data=await res.json();
+        chat.lastChild.textContent=data.reply;
+    }catch(err){
+        chat.lastChild.textContent="माफ करें, अभी जवाब नहीं दे पा रहा हूँ।";
+    }
 });
 </script>
 </body>
